# xzre

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  classFlags1.html  classFlags2.html  classes.html  common.php  composer.json  dasm.c  elf.c  elf_find_string.c  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  hook.c  index.html  invoker.php  md_README.html  menudata.js  pages.html  ssh__patch_8c.html  ssh_patch.S  ssh_patch.c  structaudit__ifaces.html  structauditstate.html  structauth__bypass__args.html  structbackdoor__cpuid__reloc__consts.html  structbackdoor__cpuid__reloc__consts__t.html  structbackdoor__data.html  structbackdoor__data__handle.html  structbackdoor__data__handle__t.html  (+93 more)
.github/workflows/: xzre.yaml
gdb/: common.gdb  gdb_commands.py  run_sshd.gdb  sshd_child.gdb
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  enums_0.js  enums_1.js  (+49 more)
xzre_code/: CMakeLists.txt  backdoor_entry.c  backdoor_symbind64.c  c_memmove.c  c_strlen.c  c_strnlen.c  chacha_decrypt.c  count_bits.c  count_pointers.c  decrypt_payload_message.c  elf_parse.c  elf_symbol_get_addr.c  extract_payload_message.c  fake_lzma_alloc.c  fake_lzma_free.c  find_call_instruction.c  find_function.c  find_lea_instruction.c  find_string_reference.c  get_lzma_allocator.c  hook_RSA_public_decrypt.c  init_elf_entry_ctx.c  is_endbr64_instruction.c  main_elf_parse.c  resolve_libc_imports.c  rsa_key_hash.c  run_backdoor_commands.c  secret_data_append_from_address.c  secret_data_append_from_instruction.c  secret_data_append_item.c  secret_data_append_singleton.c  secret_data_get_decrypted.c  sha256.c  sshd_patch_variables.c  update_cpuid_got_index.c  update_got_offset.c
